// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with details 1`] = `
<react-mdl-FooterSection
  logo="Unleash 1.1.0"
  type="bottom"
>
  <small>
    (test)
  </small>
  <br />
  <small>
    We are the best!
  </small>
</react-mdl-FooterSection>
`;

exports[`renders correctly with empty api details 1`] = `
<react-mdl-FooterSection
  logo="Unleash "
  type="bottom"
>
  <small>
    (test)
  </small>
  <br />
  <small>
    We are the best!
  </small>
</react-mdl-FooterSection>
`;

exports[`renders correctly without uiConfig 1`] = `
<react-mdl-FooterSection
  logo="Unleash 1.1.0"
  type="bottom"
>
  <small>
    
  </small>
  <br />
  <small />
</react-mdl-FooterSection>
`;
